# music-production

./: .gitignore  README.md  arrange.py  config.py  deploy.py  main.py  mix_notes.md  patterns.py  pyproject.toml  scenes.py  techno_track.py
